UC-509 - Central feed. Filters. It should be possible to expand/collapse filters. Style fix

--- a/src/Compent.uIntra/App_Plugins/CentralFeed/centralFeed.css
+++ b/src/Compent.uIntra/App_Plugins/CentralFeed/centralFeed.css
@@ -385,6 +385,17 @@
 	}
 }
 
+.filter {
+	&__toggle {
+		display: flex;
+		align-items: center;
+		margin: 0 0 20px;
+		padding: 10px;
+		background: none;
+		border: none;
+	}
+}
+
 body:not(._show-filters) .filter__body {
 	display: none !important;
 }
